crates/swift-bridge-macro/tests/ui/incorrect-argument-type.stderr
error[E0308]: mismatched types
  --> tests/ui/incorrect-argument-type.rs:15:16
   |
15 |         fn fn1(arg: &str);
   |                ^^^^^^ expected `u16`, found `&str`
